--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,5 @@
-baseurl: /..
+baseurl: ''
 githubHost: http://localhost:4000
 localHost: http://ouyangtao404.github.com/
+permalink: /:month-:day-:year/:title.html
+markdown: rdiscount
